terraform/modules/securityGroup/resources.tf
provider "aws" {
  region = var.region
  shared_credentials_file = var.creds
  profile = "default"
}

resource "aws_security_group" "sg" {
  name = "sg"
  vpc_id = "${var.vpc_id}"

  # SSH access from the VPC
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  

  tags = {
    Environment = "${var.environment_tag}"
  }
}
